[tool.poetry]
name = "strategy-statistics"
version = "0.1.0"
description = "This app produces statistics for strategies implemented in trk-strategy"
authors = ["TRK Strategy & Complexity"]

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/'
secondary = true

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# PySide6 = "^6.4.2"
pandas = "^1.5.3"
PySide6 = "^6.4.2"
plotly = "^5.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
